@@ -1,2 +1,0 @@
-mobiusdir = $(pyexecdir)/pymobius/app/emule
-mobius_PYTHON = *.py
