@@ -95,6 +95,7 @@ Mobius Forensic Toolkit 2.14
 	* mobius::app: Removed module
 	* tools: New tool emule_known_met
 	* tools: New tool emule_stored_searches_met
+	* pymobius.app.emule: Removed module
 
 Mobius Forensic Toolkit 2.13
 	* Added new extension event-viewer
